2005-09-04  Steve Harris  <steve@plugin.org.uk>

	* Released 0.22

2005-09-02  Steve Harris  <steve@plugin.org.uk>

	* address.c, server.c: Added patch from Martin Habets that redoes
	  parts of previous patches...

2005-09-01  Steve Harris  <steve@plugin.org.uk>

	* address.c, server.c: Added patches from Jesse Chappell and Dave
	  Robillard to close various sockets when there no longer used.

2005-08-19  Steve Harris  <steve@plugin.org.uk>

	* address.c, testlo.c: Added patch from Dave Robillard to fix parsing
	  of IPV6 addresses in URLs.

2005-08-11  Martin Habets  <mhabets@users.sourceforge.net>

	* message.c: Fix LO_CHAR sending on big endian architectures.

2005-08-09  Martin Habets  <mhabets@users.sourceforge.net>

	* server.c: Add lo_server_del_method()
	* server_thread.c: Add lo_server_thread_del_method()

2005-07-26  Steve Harris  <steve@plugin.org.uk>

	* bundle.c, server.c: Endianess fixed from Topher Cyll for bundle
	  timestamps.

	  # Bundle delivery timing is still not right, theres an arithmetic
	  # errorsomewhere, but I cant see it.

2005-06-05  Steve Harris  <steve@plugin.org.uk>

	* server.c: Patch from Lorenz Schori to optionally disable IPV6 support
	  with --disable-ipv6

2005-03-31  Steve Harris  <steve@plugin.org.uk>

	* server.c: Patch from Martin Habets that expands wildcarded patch to
	  the matching path where possible (eg. not when using the NULL
	  wildcard path).

2005-03-04  Steve Harris  <steve@plugin.org.uk>

	* server.c: try to fix the global struct thing that keeps track of
	  server sockets.

2005-02-03  Steve Harris  <steve@plugin.org.uk>

	* server.c: made UDP messages resolve back to thier originating server,
	  or something close to it.

2005-02-03  Taybin Rutkin <taybin@earthlink.net>

	* server.c: commited resource leak fix from Jesse Chappell

2005-01-22  Steve Harris  <steve@plugin.org.uk>

	* address.c: fixed bug when determining protocol of URL with
	  unspecified sub-protocol. Reported by Pix.
