@@ -1,3 +1,8 @@
+2005-12-05  Nicholas Humfrey  <njh@aelius.com>
+
+	* Added lo_send_from, lo_send_message_from and lo_send_bundle_from
+	* Merged guts of lo_send_message and lo_send_bundle into new static send_data()
+
 2005-09-04  Steve Harris  <steve@plugin.org.uk>
 
 	* Released 0.22
